--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -63,22 +63,10 @@
 	
 	<div id="SocialMediaLinks">
 	
-	
-<!--<a href="https://twitter.com/share" data-url="http://Reconstitution2012.com" data-text="A Live Deconstruction of the US Presidential Debates" data-via="Sosolimited"><img src="images/landingTwitterLogo.png" class="push-1" style="position:absolute; top:26px;"/></a>
+
+	<a href="https://twitter.com/share?url=http://reconstitution2012.com/&amp;text=On October 16th watch a live deconstruction of the US Presidential debates &amp;hashtags=CreatorsProject&amp;via=Sosolimited" target="_blank"> <img src="images/landingTwitterLogo.png" class="push-1" style="position:absolute; top:26px;"/></a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-	
-	
-	
-		<a href="https://www.sosolimited.com" target="blank"> <img src="images/landingFBLogo.png" class="push-1" style="position:absolute; top:26px; left:40px"/></a> -->
-	
-	
 
-
-
-
-	<a href="https://twitter.com/share" target="blank" data-url="http://reconstitution2012.com/" data-text="Watch a live deconstruction of the US Presidential debates" data-via="Sosolimited" data-count="none" data-hashtags="Recon2012"> <img src="images/landingTwitterLogo.png" class="push-1" style="position:absolute; top:26px;"/></a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-	
 
 		<a href="https://www.facebook.com/pages/Sosolimited/26159222134?ref=hl" target="blank" class="facebook"> <img src="images/landingFBLogo.png" class="push-1" style="position:absolute; top:26px; left:40px"/></a>
 	
