--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -64,7 +64,7 @@
 	<div id="SocialMediaLinks">
 	
 
-	<a href="https://twitter.com/share?url=http://reconstitution2012.com/&amp;text=On October 16th watch a live deconstruction of the US Presidential debates &amp;hashtags=CreatorsProject&amp;via=Sosolimited" target="_blank"> <img src="images/landingTwitterLogo.png" class="push-1" style="position:absolute; top:26px;"/></a>
+	<a href="https://twitter.com/share?url=http://reconstitution2012.com/&amp;text=Check out Sosolimited's deconstruction of the US Presidential debates:&amp;hashtags=CreatorsProject&amp;via=Sosolimited" target="_blank"> <img src="images/landingTwitterLogo.png" class="push-1" style="position:absolute; top:26px;"/></a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 
