--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -8,11 +8,19 @@
 		<span class="franklinBook navSubTitle gray60" id="navDebateNum">1st Debate</span>
 		<span class="franklinBook navSubTitle gray60">|</span>
 		<span class="franklinBook navSubTitle gray60" id="navDate"><!--October 3, 2012--></span>
-		<span class="franklinBook navSubTitle gray60">|</span>
-		<span class="franklinMed navSubTitle cherry" id="navTime">9:14 PM</span>
+		<!-- <span class="franklinBook navSubTitle gray60">|</span>
+		<span class="franklinMed navSubTitle cherry" id="navTime">9:14 PM</span> -->
 	</div>
 </div>
 
+<div id="navLeftButtons">
+	<div id="navGoLiveButton" class="franklinDemiComp navButton cherry"> GO LIVE! </div>
+	<div id="navPlaybackButton" class="franklinDemiComp navButton cherry"> 1x </div>
+	<div id="navComparisonButton" class="franklinDemiComp navButton cherry"> STATS </div>
+	<div id="navTranscriptButton" class="franklinDemiComp navButton cherry"> TRANSCRIPT </div>
+</div>
+
+<!--
 <div id="navRight">
 	<div id="navModeButtons">
 	  <div id="navPlaybackButton" class="franklinDemiComp navButton cherry"> 1x </div>
@@ -20,7 +28,7 @@
 	  <div id="navComparisonButton" class="franklinDemiComp navButton cherry"> STATS </div>
 	</div>
 </div>
-
+-->
 
 <div id="navInstructions">
 <div class="container">
