added live message

--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -21,12 +21,20 @@
 	</div>
 </div>
 
+<div id="navNotification">
+	<div class="container">
+		<div class="franklinDemiCompIt navInstructionsText push-0">
+		Debate 2 is now live.
+		</div>
+	</div>
+	<div id="backgroundInstructions"> </div>
+</div>
 
 <div id="navInstructions">
-<div class="container">
-	<div class="franklinDemiCompIt navInstructionsText push-0">
-	You scroll & click.<br> They expose their<br>hidden secrets.
+	<div class="container">
+		<div class="franklinDemiCompIt navInstructionsText push-0">
+		You scroll & click.<br> They expose their<br>hidden secrets.
+		</div>
 	</div>
-</div>
-<div id="backgroundInstructions"> </div>
+	<div id="backgroundInstructions"> </div>
 </div>
