--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -185,6 +185,8 @@ p { /* Transcript text */
 }
 
 #comparisons .active.wrapper {
+  /* When in the stats mode, overflow-x is set to visible which causes shit. */
+  overflow-x: hidden !important;
   /*-webkit-transform: scale(1);
   transform: scale(1);*/
   /* opacity: 1.0 !important; */
