temp working files

--- a/app/templates/comparison/megalist.html
+++ b/app/templates/comparison/megalist.html
@@ -4,9 +4,11 @@
 	<p class="franklinMedCompIt comparisonTitle <%=comparison.get("color1").toLowerCase()%> comparisonExpText" > <%= comparison.get("title") %> </p>
 	<hr class="bg<%=comparison.get("color1")%>"" style="height:3px"/>
 	<p class="franklinBookComp comparisonSubtitle <%=comparison.get("color1").toLowerCase()%> "><%= comparison.get("subtitle") %></p>
+
+	<div class="listGradient"> </div>				
 		
 	<!-- Obama top 20 -->					
-	<div class="push-0" style="position:absolute;">
+	<div class="push-0" style="top: 160px; position:absolute;">
 	<p class="listCandidate grayBlue franklinDemiCompIt "> <br>Obama <br></p>
 	<hr class="bgGrayBlue span-2" style="height:3px"/>  	
 
@@ -26,7 +28,7 @@
 	</div>
 	
 	<!-- Romney top 20 -->					
-	<div class="push-3" style="position:absolute;">
+	<div class="push-3" style="top: 160px;  position:absolute;">
 	<span class="listCandidate grayBlue franklinDemiCompIt"> <br>Romney<br> </span> 
 	<hr class="bgGrayBlue span-2" style="height:3px"/> 
 
