--- a/app/templates/comparison/spectrum.html
+++ b/app/templates/comparison/spectrum.html
@@ -5,8 +5,8 @@
 		<p class="franklinBookComp comparisonSubtitle " style="color:rgb(<%=comparison.get("color1")[0]%>, <%=comparison.get("color1")[1]%>, <%=comparison.get("color1")[2]%>);"><%= comparison.get("subtitle") %> </p>
 		
 		<div class = "span-6" style="position:relative; height:350px; top:12px;">		
-		
-		<div class = "spectrumBackgroundPush <%=comparison.get("gradient")%>" style="height:350px; width:20px; position:relative; "></div>
+		<div class="spectrumGradient" ></div>		
+		<div class = "spectrumBackgroundPush <%=comparison.get("gradient")%>" style="top: 0px; height:350px; width:20px; position:absolute; "></div>
 
 		<%  var val0 = comparison.get("traits")[0].vals[0]; 
 			var val1 = comparison.get("traits")[0].vals[1]; 
@@ -16,11 +16,13 @@
   		var colorExtreme1 = comparison.get("color1");
   		var colorExtreme2 = comparison.get("color2");
 			var midpoint = 0.5*(range[0] + range[1]);
-			
+			var hithresh = 0.05*range[0] + 0.95*range[1];
+			var lothresh = 0.95*range[0] + 0.05*range[1];
+						
 			function mapVal(val, bound) {
 			
-				if (bound && (val < range[0]/100.0)) val = range[0]/100.0;
-				if (bound && (range[1]/100.0 < val)) val = range[1]/100.0;
+				if (bound && (val < lothresh/100.0)) val = lothresh/100.0;
+				if (bound && (hithresh/100.0 < val)) val = hithresh/100.0;
 				
 				if (val == 0) {
 					val = midpoint;
