Remove faulty rule

--- a/assets/css/all.styl
+++ b/assets/css/all.styl
@@ -6,7 +6,7 @@ body {
 
   background-image: url('../../images/background-tex.jpg'); 
 
-  background-repeat: repeat; *;
+  background-repeat: repeat;
   overflow-y: scroll;	
   overflow-x: hidden;	/* not working! */
   cursor: default;
