Remove vendor prefixes from Stylus source
The appropriate vendor prefixes are automatically generated by the Nib
plugin for Stylus at compile time.

--- a/assets/css/all.styl
+++ b/assets/css/all.styl
@@ -1,3 +1,5 @@
+@import "nib"
+
 body {
   /* background: -webkit-linear-gradient(left, #9699A0, #C9D1CF, #C9D1CF, #9699A0); */
   /*background-color: rgb(110,116,116);*/
@@ -37,9 +39,8 @@ body {
 
 
 .transcript .wrapper {
-		
-  -webkit-transition: -webkit-transform .5s linear; 
-  /* transition: all .5s linear; */
+
+  transition: transform .5s linear;
   overflow:visible;
   position: static;
   
@@ -76,7 +77,7 @@ body {
 
 #bigWords .hiddenWord {
   display: none;
-  -webkit-transform: none;
+  transform: none;
 }
 
 #bigWordsHolder {
@@ -107,11 +108,6 @@ body {
 	/* color: rgb(146,152,152); */
 	color: rgb(190,190,190);
 
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
 	user-select: none;
 	/*color: rgb(135,140,140);*/
 	/*color: rgb(116,120,120);*/
@@ -200,13 +196,13 @@ p { /* Transcript text */
     
   left: 100%;
     
-  -webkit-transition: left 1.2s linear;
+  transition: left 1.2s linear;
   
 }
 
 #comparisons .wrapper.play {
 	left: 100%;
-	-webkit-transition: left 0s;
+	transition: left 0s;
 }
 
 /* For skrollr purposes */
@@ -247,13 +243,8 @@ hr {
 	height: 48px;
 	z-index:6000;
 
-	transform:rotate(90deg);
-	-ms-transform:rotate(90deg); /* IE 9 */
-	-moz-transform:rotate(90deg); /* Firefox */
-	-webkit-transform:rotate(90deg); /* Safari and Chrome */
-	-o-transform:rotate(90deg); /* Opera */
-	
-	-webkit-transition: -webkit-transform 1s;	
+	transform: rotate(90deg);
+	transition: transform 1s;
 	
   left: -245px; /* width / 2 + height / 2 */
   top: 245px;
@@ -268,13 +259,8 @@ hr {
 	top: 531px;
 	left: -87px;
 	
-	transform:rotate(90deg);
-	-ms-transform:rotate(90deg); /* IE 9 */
-	-moz-transform:rotate(90deg); /* Firefox */
-	-webkit-transform:rotate(90deg); /* Safari and Chrome */
-	-o-transform:rotate(90deg); /* Opera */
-	
-	-webkit-transition: -webkit-transform 1s;	
+	transform: rotate(90deg);
+	transition: transform 1s;
 	
 	font-size:20px;
 	
@@ -287,13 +273,8 @@ hr {
 	width:350px;
 	z-index:6000;
 
-	transform:rotate(-90deg);
-	-ms-transform:rotate(-90deg); /* IE 9 */
-	-moz-transform:rotate(-90deg); /* Firefox */
-	-webkit-transform:rotate(-90deg); /* Safari and Chrome */
-	-o-transform:rotate(-90deg); /* Opera */
-	
-	-webkit-transition: -webkit-transform 1s;	
+	transform: rotate(-90deg);
+	transition: transform 1s;
 
 	bottom: 200px;
 	font-size:18px;
@@ -387,11 +368,7 @@ hr {
 
  
 .rot90 {
-	transform:rotate(90deg);
-	-ms-transform:rotate(90deg); /* IE 9 */
-	-moz-transform:rotate(90deg); /* Firefox */
-	-webkit-transform:rotate(90deg); /* Safari and Chrome */
-	-o-transform:rotate(90deg); /* Opera */
+	transform: rotate(90deg);
 }
 
 
@@ -402,15 +379,10 @@ hr {
 	height: 100%;
 	position: fixed;
 		
-	-webkit-transition: -webkit-transform 1s;	
+	transition: transform 1s;
 	z-index: 3500;
 	
 	transform:translate(-120%);
-	-ms-transform:translate(-120%); /* IE 9 */
-	-moz-transform:translate(-120%); /* Firefox */
-	-webkit-transform:translate(-120%); /* Safari and Chrome */
-	-o-transform:translate(-120%); /* Opera */
-
 }
 
 #navInstructions {
@@ -420,7 +392,7 @@ hr {
 	height: 100%;
 	position: fixed;
 		
-	-webkit-transition: -webkit-transform 1s;	
+	transition: transform 1s;
 	z-index: 3500;
 }
 
@@ -465,20 +437,20 @@ hr {
 
 #transcript {
 	position: relative;
-	-webkit-transition: left 1.2s linear, visibility 0s linear 1.2s;
+	transition: left 1.2s linear, visibility 0s linear 1.2s;
 }
 
 #transcript.play {
-	-webkit-transition: left 1.2s linear, visibility 0s linear 0s;
+	transition: left 1.2s linear, visibility 0s linear 0s;
 }
 
 #comparisons {
 	visibility: hidden;	/* Init state */
-	-webkit-transition: visibility 0s linear 1.2s;
+	transition: visibility 0s linear 1.2s;
 }
 
 #comparisons.play {
-	-webkit-transition: visibility 0s linear 0s;
+	transition: visibility 0s linear 0s;
 }
 
 
@@ -966,7 +938,7 @@ red background-color: rgb(255,85,57);
 	padding: 0px 0px 0px 0px;
 	/* background-color:yellow; */
 
-	-webkit-transition: -webkit-transform 1s ease-in;	
+	transition: transform 1s ease-in;
 	/* -webkit-transform: translateZ(0px); */
 	
 	z-index: 8;
@@ -1023,13 +995,13 @@ red background-color: rgb(255,85,57);
   /* This transition ensures that the categoryOverlay element does not move out
    * of view until after its child has finished animating. Therefore, the
    * duration parameter should match the child's animation duration. */
-  -webkit-transition: left 0 linear 0.5s;
+  transition: left 0 linear 0.5s;
 }
 /* When the "play" class is added, the categoryElement immediately transitions
  * into view. */
 .categoryOverlay.play {
   left: 0;
-  -webkit-transition: left 0 linear 0;
+  transition: left 0 linear 0;
 }
 .categoryOverlayText {
 	position: relative;
@@ -1040,7 +1012,7 @@ red background-color: rgb(255,85,57);
 	padding: 0px 20px 0px 10px;
   color: rgb(255,255,255);	
 	
-	-webkit-transition: top 0.5s;
+	transition: top 0.5s;
 }
 .categoryOverlay.play .categoryOverlayText {
   top: 0;
@@ -1174,13 +1146,13 @@ red background-color: rgb(255,85,57);
 	padding: 0px 0px 0px 0px;
 	/* background-color:yellow; */
 
-	-webkit-transition: -webkit-transform 1s ease-in, left 1s, top 1s, height 1s, width 1s;	
+	transition: transform 1s ease-in, left 1s, top 1s, height 1s, width 1s;
 	/* -webkit-transform: translateZ(0px); */
 
 }
 
 .wordCountTextHolder.hide {
-	-webkit-transition: visibility 0s linear 1s;
+	transition: visibility 0s linear 1s;
 }
 
 .wordCountText {
@@ -1192,7 +1164,7 @@ red background-color: rgb(255,85,57);
 	padding: 0px 0px 0px 0px;
 	line-height:120px;
 	
-	-webkit-transition: top 1s, font-size 1s, line-height 1s;
+	transition: top 1s, font-size 1s, line-height 1s;
 }
 
 .wordCountWord {
@@ -1204,7 +1176,7 @@ red background-color: rgb(255,85,57);
 	padding: 0px 0px 0px 0px;
 	line-height:120px;
 	
-	-webkit-transition: top 1s, font-size 1s, line-height 1s;
+	transition: top 1s, font-size 1s, line-height 1s;
 }
 
 .wordCountLine {
@@ -1216,7 +1188,7 @@ red background-color: rgb(255,85,57);
 	padding: 0 0 0 0;
 	width:0px;
 	
-	-webkit-transition: width 1s;
+	transition: width 1s;
 }
 
 .numberPhrase {
@@ -1228,7 +1200,7 @@ red background-color: rgb(255,85,57);
 	margin: 0px 0px 0px 0px;
 	padding: 0px 0px 0px 0px;
   color: rgb(255,255,255); 
-	-webkit-transition: left 1s, right 1s, top 1s, height 1s, width 1s, font-size 1s, line-height 1s, color 1s;
+	transition: left 1s, right 1s, top 1s, height 1s, width 1s, font-size 1s, line-height 1s, color 1s;
 	/* -webkit-transform: translateZ(0px);	*/
   z-index: 2;
 
@@ -1243,7 +1215,7 @@ red background-color: rgb(255,85,57);
 	margin: 0px 0px 0px 0px;
 	padding: 0px 0px 0px 0px;
   color: rgb(255,59,162);
-	-webkit-transition: left 1s, right 1s, top 1s, height 1s, width 1s, font-size 1s, line-height 1s;
+	transition: left 1s, right 1s, top 1s, height 1s, width 1s, font-size 1s, line-height 1s;
 	/* -webkit-transform: translateZ(0px);	*/
   z-index: 2;
 }
@@ -1255,7 +1227,7 @@ red background-color: rgb(255,85,57);
   position: absolute;
   font-size: 400px;
   color: rgb(255,59,162);
-  -webkit-transition: left 1s, right 1s, top 1s, height 1s, font-size 1s, line-height 1s;
+  transition: left 1s, right 1s, top 1s, height 1s, font-size 1s, line-height 1s;
   z-index: 0;
 }
 
@@ -1266,7 +1238,7 @@ red background-color: rgb(255,85,57);
   font-size: 0px;
   line-height: 0.75em;
   opacity: 0;
-  -webkit-transition: font-size 1s, opacity 1s;
+  transition: font-size 1s, opacity 1s;
   z-index: 6;
 }
 
@@ -1276,7 +1248,7 @@ red background-color: rgb(255,85,57);
   line-height: 0.75em;
   opacity: 0;
   z-index: 3;
-  -webkit-transition: opacity 1s;
+  transition: opacity 1s;
 }
 
 .posemo {
@@ -1293,9 +1265,9 @@ red background-color: rgb(255,85,57);
 .emoSign {
   position: absolute;
   z-index: 4;
-  -webkit-transform: scale(0.0001);
-  -webkit-transition: font-size 1s, -webkit-transform 2s, opacity 1s;
-  -webkit-transform-origin: 50% 50%;
+  transform: scale(0.0001);
+  transition: font-size 1s, transform 2s, opacity 1s;
+  transform-origin: 50% 50%;
   width: 400px;
   height: 400px;
 }
