--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -17,7 +17,7 @@
 	<span id="landingObama" class="franklinExDemiComp gray78">OBAMA</span>
 	<span id="landingVersus" class="franklinExDemiComp gray78">VS</span>
 	<span id="landingRomney" class="franklinExDemiComp gray78">ROMNEY</span>
-	<span id="landingSubTitle" class="franklinDemiCompIt gray200">A LIVE DECONSTRUCTION OF THE US PRESIDENTIAL DEBATES</span>
+	<span id="landingSubTitle" class="franklinDemiCompIt gray200">LOADING...</span>
 	<div id="landingSubTitleDiv"></div> 
 
 	<div id="landingButtonBox" class="push-4">
