--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -34,8 +34,8 @@
 
 <div id="navNotification">
 	<div class="container">
-		<div class="franklinDemiCompIt navInstructionsText push-0">
-		Debate 2 is now live.
+		<div class="franklinDemiCompIt navInstructionsTextLarge push-0">
+		Debate 2 is now <span class="orangeRed">live</span>.
 		</div>
 	</div>
 	<div id="backgroundInstructions"> </div>
@@ -45,7 +45,14 @@
 <div id="navInstructions">
 	<div class="container">
 		<div class="franklinDemiCompIt navInstructionsText push-0">
-		You scroll & click.<br> They expose their<br>hidden secrets.
+		ReConstitution is a <span class="orangeRed">real-time analysis</span> of the Presidential Debates. Facts, figures, & emotional outbursts from the candidates are highlighted and cross-referenced throughout the 90 minute transcript.<br>
+<br>		
+		To explore, <span class="orangeRed">scroll</span> through the transcript and <span class="orangeRed">click</span> on words and phrases.<br>
+<br>
+To see the current psychological states of Obama & Romney, click on the <span class="orangeRed">Stats</span> button in the lower left and scroll through the charts.<br>
+<br>
+To return to the transcript mode while in Stats view, click the <span class="orangeRed">Transcript</span> button. If watching a replay of the debate, you can speed it up with the <span class="orangeRed">1x</span> button<br> 
+<br>
 		</div>
 	</div>
 	<div id="backgroundInstructions"> </div>
