--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -422,8 +422,10 @@ hr {
 }
 
 #backgroundInstructions{
-	opacity: .8;
-	background-color: rgb(231,200,31); /*rgb(76,76,76); rgb(207,255,36); rgb(255,213,0)*/
+	opacity: .9;
+	
+	background-color:rgb(64,180,230);
+	/*background-color: rgb(231,200,31); rgb(76,76,76); rgb(207,255,36); rgb(255,213,0)*/
 	width: 100%;
 	height: 100%;
 	position: fixed;
@@ -431,12 +433,27 @@ hr {
 }
 .navInstructionsText{
 	
-	font-size:96px !important;
+	font-size:24px !important;
+	line-height: 36px;
+	text-transform: uppercase;
+	/* left: 200px; */
+	position: absolute;
+	margin-top: 140px;
+	margin-right: 140px;
+	
+	color:white;
+	z-index: 4500;
+}
+
+.navInstructionsTextLarge{
+	
+	font-size:90px !important;
 	line-height: 120px;
 	text-transform: uppercase;
 	/* left: 200px; */
 	position: absolute;
 	margin-top: 140px;
+	margin-right: 140px;
 	
 	color:white;
 	z-index: 4500;
