Changed landing colors

--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -658,7 +658,9 @@ hr {
 	left: 286px;
 	font-size: 96px;
 	line-height: 90px;
-	color:rgb(255, 239,54);
+	color:rgb(64,180,230);
+	
+	/*color:rgb(255, 239,54);*/
 	/*color:rgb(207,255,36);*/
 	/*color:rgb(35,255,49);*/
 	/*line-height: 98px;
