--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -45,7 +45,7 @@
 <div id="navInstructions">
 	<div class="container">
 		<div class="franklinDemiCompIt navInstructionsText push-0">
-		ReConstitution is a <span class="orangeRed">real-time analysis</span> of the Presidential Debates. Facts, figures, & emotional outbursts from the candidates are highlighted and cross-referenced throughout the 90 minute transcript.<br>
+		ReConstitution is a <span class="orangeRed">real-time analysis</span> of the Presidential Debates.<br>Facts, figures, and emotional outbursts from the candidates are highlighted and cross-referenced throughout the 90-minute transcript.<br>
 <br>		
 		To explore, <span class="orangeRed">scroll</span> through the transcript and <span class="orangeRed">click</span> on words and phrases.<br>
 <br>
