--- a/app/templates/comparison/spectrum.html
+++ b/app/templates/comparison/spectrum.html
@@ -12,6 +12,8 @@
 			var val1 = comparison.get("traits")[0].vals[1]; 
 			var totalBarH = 400; 
 			var totalH = 400;
+			
+			//console.log(comparison.get("title") + ": " + val0 +", " + val1);
 			var range = [comparison.get("range")[0], comparison.get("range")[1]];
   		var colorExtreme1 = comparison.get("color1");
   		var colorExtreme2 = comparison.get("color2");
@@ -21,15 +23,22 @@
 						
 			function mapVal(val, bound) {
 			
-				if (bound && (val < lothresh/100.0)) val = lothresh/100.0;
-				if (bound && (hithresh/100.0 < val)) val = hithresh/100.0;
-				
-				if (val == 0) {
-					val = midpoint;
-					
+				if (bound && (val < lothresh/100.0)) {
+					val = lothresh/100.0;
+					//console.log("lothresh = " + lothresh + " | val = " + val);
 				}
+				if (bound && (hithresh/100.0 < val)) {
+					val = hithresh/100.0;
+					//console.log("hithresh = " + hithresh + " | val = " + val);					
+				}
+				
+				//if (val == 0) {
+				//	val = midpoint;
+					
+				//}
 				var h = totalBarH*(100*val-range[0])/(range[1]-range[0]);
 				var t = totalH-h;
+				//if (bound) console.log(h + ", " + t);
 				return [h,t];
 			}
 			function mapColor(val, channel) {
