added links to LIWC papers

--- a/app/templates/comparison/spectrum.html
+++ b/app/templates/comparison/spectrum.html
@@ -2,7 +2,7 @@
 
 		<p class="franklinMedCompIt comparisonTitle " style="color:rgb(<%=comparison.get("color1")[0]%>, <%=comparison.get("color1")[1]%>, <%=comparison.get("color1")[2]%>);"> <%= comparison.get("title") %></p>
 		<hr style="height:3px; background-color:rgb(<%=comparison.get("color1")[0]%>, <%=comparison.get("color1")[1]%>, <%=comparison.get("color1")[2]%>);"/> 
-		<p class="franklinBookComp comparisonSubtitle " style="color:rgb(<%=comparison.get("color1")[0]%>, <%=comparison.get("color1")[1]%>, <%=comparison.get("color1")[2]%>);"><%= comparison.get("subtitle") %> <a style="color:rgb(<%=comparison.get("color1")[0]%>, <%=comparison.get("color1")[1]%>, <%=comparison.get("color1")[2]%>);" href="<%=comparison.get("link")%>" target="blank">Info</a></p>
+		<p class="franklinBookComp comparisonSubtitle " style="color:rgb(<%=comparison.get("color1")[0]%>, <%=comparison.get("color1")[1]%>, <%=comparison.get("color1")[2]%>);"><%= comparison.get("subtitle") %> <a style="color:rgb(<%=comparison.get("color1")[0]%>, <%=comparison.get("color1")[1]%>, <%=comparison.get("color1")[2]%>);" href="<%=comparison.get("link")%>" target="blank">More info</a></p>
 		
 		<div class = "span-6" style="position:relative; height:400px; top:12px;">		
 		<div class="spectrumGradient" ></div>		
