About link on landing page

--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -33,8 +33,9 @@
 
 
 		<div>
-		<span class="landingMakingof franklinMedComp gray60 span-2">>> Go Behind the Scenes</span>
-				<span class="landingMakingofSubTitle franklinBookComp gray60 span-2">Read about the making of the project</span>
+			<span class="landingMakingof franklinMedComp gray60 span-2">
+				<a href="http://sosolimited.com/blog/2012/10/announcing-reconstitution-2012/" target="blank">>> About This Project</a></span>
+				<span class="landingMakingofSubTitle franklinBookComp gray60 span-2">The science behind the graphics</span>
 			</div>
 		
 	</div>
