--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -799,21 +799,24 @@ hr {
 }
 
 
-.landingMakingof 
+.landingMakingof a 
 {
-	visibility: hidden;
+	/*visibility: hidden; */
+	text-decoration: none !important;
 	position: static;
 	padding: 0 0 0 0;
 	left: 0px;
 	font-size: 25px;
 	line-height: 25px;
 	margin: 12px 0px 0px 0px;
+	color:rgb(76,76,76) !important;
+	
 	/*color:rgb(255,239,54) !important;*/
 	/*color:rgb(255,85,57);*/
 }
 
 
-.landingMakingof:hover{
+.landingMakingof a:hover {
 	color:rgb(255,255,255) !important;
 }
 
