--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -34,7 +34,7 @@
 
 		<div>
 			<span class="landingMakingof franklinMedComp gray60 span-2">
-				<a href="http://sosolimited.com/blog/2012/10/announcing-reconstitution-2012/" target="blank"><br>>> About This Project</a></span>
+				<a href="http://thecreatorsproject.com/gallery/sosolimited/" target="blank"><br>>> About This Project</a></span>
 				<span class="landingMakingofSubTitle franklinBookComp gray60 span-2">The science behind the graphics</span>
 			</div>
 		
