--- a/assets/css/all.styl
+++ b/assets/css/all.styl
@@ -808,6 +808,26 @@ hr {
 	/*color:rgb(255,85,57);*/
 }
 
+.landingAbout 
+{
+	/*visibility: hidden; */
+	text-decoration: none !important;
+	position: static;
+	padding: 0 0 0 0;
+	left: 0px;
+	font-size: 25px;
+	line-height: 25px;
+	margin: 12px 0px 0px 0px;
+	color:rgb(76,76,76) !important;
+	
+	/*color:rgb(255,239,54) !important;*/
+	/*color:rgb(255,85,57);*/
+}
+
+.landingAbout:hover {
+	color:rgb(255,255,255) !important;
+}
+
 
 .landingMakingof a:hover {
 	color:rgb(255,255,255) !important;
