--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -35,7 +35,7 @@
 <div id="navNotification">
 	<div class="container">
 		<div class="franklinDemiCompIt navInstructionsTextLarge push-0">
-		Debate 2 is now <span class="orangeRed">live</span>.
+		Debate 2 is now <span class="orangeRed">live</span>
 		</div>
 	</div>
 	<div id="backgroundInstructions"> </div>
@@ -46,6 +46,8 @@
 	<div class="container">
 		<div class="franklinDemiCompIt navInstructionsText push-0">
 		ReConstitution is a <span class="orangeRed">real-time analysis</span> of the Presidential Debates.<br>Facts, figures, and emotional outbursts from the candidates are highlighted and cross-referenced throughout the 90-minute transcript.<br>
+<br>
+Please use Chrome or Safari.<br>
 <br>		
 		To explore, <span class="orangeRed">scroll</span> through the transcript and <span class="orangeRed">click</span> on words and phrases.<br>
 <br>
